*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 1999-03-10  Thomas Tanner  <tanner@gmx.de>
 
-	* NEWS: ordered by importance
+	* NEWS: sorted by importance
 	* Makefile.am: set LIBTOOL_FLAGS when generating libtool
 	* configure.in: check for dlopen support and set LIBTOOL_FLAGS
 	  accordingly
