--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-11  Thomas Tanner  <tanner@gmx.de>
+
+	* ltconfig.in: replaced `configure' with $progname and all
+	  line numbers with @LINENO@
+	
 1999-03-11  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libltdl/ltdl.c (strdup): cannot return str when it's NULL
