--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-03-11  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in: set dlopen_* variables to unknown when appropriate
+	* ltmain.in: only emit warning about lack of AC_LIBTOOL_DLOPEN if
+	*all* dlopen_* variables are set to unknown
+
 1999-03-11  Thomas Tanner  <tanner@gmx.de>
 
 	* ltmain.in: delete the old output files (incl. the relinked binary)
