--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-13  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltmain.in (-static, -all-static): revert March 11's patch, I was 
+	barking up the wrong tree
+
 1999-03-12  Thomas Tanner  <tanner@gmx.de>
 
 	* libltdl/ltdl.c: removed FILENAME_MAX since LTDL_FILENAME_MAX
